<resources>
    <string name="app_name">收藏管家</string>
    <string name="onclickis_exit">再按一次退出程序</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
    <string name="category_title">分类</string>
    <string name="category_name">类目</string>
    <string name="category_type_name">类目名称</string>
    <string name="search_hint">搜索名称、关键词或描述</string>
    <string name="home_title">首页</string>
    <string name="user_title">我的</string>
    <string name="logo">logo</string>
    <string name="year_txt">年份</string>
    <string name="year">年</string>
    <string name="size_txt">尺寸</string>
    <string name="long_txt">长:</string>
    <string name="wide_txt">宽:</string>
    <string name="high_txt">高:</string>
    <string name="price_txt">进价</string>
    <string name="can_sale">可售</string>
    <string name="cant_sale">不可售</string>
    <string name="yet_sale">已售</string>
    <string name="add_time_heard">添加时间：2019.11.00 12:00</string>
    <string name="invitation_code">邀请码</string>
    <string name="invitation_hint">24小时内给邀请人</string>
    <string name="add_password">添加密码</string>
    <string name="my_collection">我的收藏</string>
    <string name="recycle">回收站</string>
    <string name="add_treasures">添加藏品</string>
    <string name="registered">注册</string>
    <string name="password">  密码</string>
    <string name="login">登录</string>
    <string name="password_null_hint">密码不能为空</string>
    <string name="user_name">用户名</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_error">密码错误</string>
    <string name="add_photo">添加图片</string>
    <string name="selected_category">已选类目</string>
    <string name="nick_name">名称</string>
    <string name="please_input">请输入</string>
    <string name="please_selected">请选择</string>
    <string name="describe">描述</string>
    <string name="keywords">关键词</string>
    <string name="keywords_hint">请输入，用逗号隔开</string>
    <string name="buy_time">购买时间</string>
    <string name="buy_price">购买价格</string>
    <string name="price_unit">RMB</string>
    <string name="sell_price">出售价格</string>
    <string name="is_selling">是否可售</string>
    <string name="is_sold">是否已售</string>
    <string name="remark">备注</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="confirm">确认</string>
    <string name="confirm_delete">确定删除</string>
    <string name="home_hint">暂无数据\n请点击右下角+号添加您的第一个藏品</string>
    <string name="modify_password">修改密码</string>
    <string name="back">返回</string>
    <string name="categoty_hint">暂无数据\n请在分类界面添加分类</string>
    <string name="not_data">暂无数据</string>
    <string name="cancel_password_success">取消密码成功</string>
    <string name="different_passwords">两个密码不相同</string>
    <string name="save_failure">保存失败</string>
    <string name="categoty_none_hint">请先添加您的分类</string>
    <string name="modify_treasures">修改藏品</string>
    <string name="photo">相册</string>
    <string name="camera">相机</string>
    <string name="not_add_img">未添加图片</string>
    <string name="filter">筛选</string>
    <string name="confirm_close">确认退出</string>
    <string name="confirm_recycle">确认回收</string>
    <string name="filter_hint">没有可选分类，添加您的第一个藏品吧</string>
    <string name="please_add_your_treasures">请添加您的藏品分类</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="parameter">参数</string>
    <string name="detail_size_title">尺寸：</string>
    <string name="detail_year_title">年份：</string>
    <string name="detail_buy_time">购买时间：</string>
    <string name="detail_buy_price">购买价格：</string>
    <string name="detail_sell_price">出售价格：</string>
    <string name="detail_sale_status">售卖状态：</string>
    <string name="not_keywords">无关键词</string>
    <string name="cancel_share">取消分享</string>
    <string name="share_error">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="my_invite_code">我的邀请码</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_code1">邀请码1</string>
    <string name="invite_code2">邀请码2</string>
    <string name="invite_code3">邀请码3</string>
    <string name="invitation_error">获取验证码失败</string>
    <string name="invitation_timeout">(已过期)</string>
    <string name="invitation_invalid">无效验证码</string>
    <string name="please_input_invite_code">请输入用户邀请码</string>
    <string name="share_to">分享到</string>
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_circle">微信朋友圈</string>
    <string name="image_create_error">生成图片失败</string>
    <string name="treasures_detail">藏品详情</string>
    <string name="a_key_empty">一键清空</string>
    <string name="confirm_empty">确认清空</string>
    <string name="data_statistics">数据统计</string>
    <string name="total_count_title">藏品总数</string>
    <string name="zero">0</string>
    <string name="total_out_price">总出价</string>
    <string name="total_in_price">总进价</string>
    <string name="must_input">(必填项)</string>
    <string name="do_hint">长按条目！\n修改、复制、删除藏品</string>
    <string name="save_img">保存图片</string>
    <string name="share_img">分享图片</string>
    <string name="save_success">保存成功</string>
    <string name="not_agree" translatable="false">不同意</string>
    <string name="agree" translatable="false">同意</string>
    <string name="privacy_rights" translatable="false">隐私政策</string>


</resources>
