<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:background="@color/white"
    android:paddingStart="@dimen/dp_15"
    android:paddingEnd="@dimen/dp_15">

    <TextView
        style="@style/modify_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/selected_category" />

    <TextView
        android:id="@+id/category_type_txt"
        style="@style/modify_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/must_type_txt"
        android:gravity="right"
        android:hint="@string/please_selected"
        android:minWidth="@dimen/dp_60"
        android:textColorHint="@color/gray_b2"
        android:textSize="@dimen/sp_13"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/must_type_txt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/must_input"
        android:textColor="@color/main_color" />
</RelativeLayout>