<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_15"
    android:paddingEnd="@dimen/dp_15">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_title_txt"
            style="@style/modify_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/nick_name" />

        <EditText
            android:id="@+id/modify_title_edit"
            style="@style/modify_title_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/name_title_txt"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toStartOf="@id/must_name_txt"
            android:background="@drawable/modify_edit_text_back"
            android:hint="@string/please_input"
            android:inputType="none"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="Autofill,RtlSymmetry" />

        <TextView
            android:id="@+id/must_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/name_title_txt"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/must_input"
            android:textColor="@color/main_color" />
    </RelativeLayout>

    <include layout="@layout/include_line_view" />

    <include layout="@layout/include_keywords_view" />

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/modify_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/size_txt" />

        <EditText
            android:id="@+id/modify_size_edit"
            style="@style/modify_title_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/please_input"
            android:inputType="none"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />
    </LinearLayout>

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/modify_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/year_txt" />

        <EditText
            android:id="@+id/modify_year_edit"
            style="@style/modify_title_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/modify_edit_text_back"
            android:hint="@string/please_input"
            android:inputType="none"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/modify_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/describe" />

        <EditText
            android:id="@+id/modify_describe_edit"
            style="@style/modify_content_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/modify_edit_text_back"
            android:gravity="top"
            android:hint="@string/please_input"
            android:maxLength="500"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>