<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black70"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_conditions_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:text="@string/filter"
            android:textColor="@color/title_clolor"
            android:textSize="@dimen/sp_14" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/keyword_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15" />
        <include layout="@layout/include_line_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/filtrate_pop_cancel_btn"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/filtrate_cancel_btn_back"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/title_clolor"
                android:textSize="@dimen/sp_18" />

            <Button
                android:id="@+id/filtrate_pop_confirm_btn"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/filtrate_confirm_btn_back"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>