<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="@dimen/dp_44"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@color/transparent"
            android:padding="@dimen/dp_10"
            android:scaleType="centerInside"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/data_statistics"
            android:textColor="@color/title_clolor"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        tools:ignore="RtlSymmetry">

        <TextView
            style="@style/invite_code_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_count_title" />

        <TextView
            android:id="@+id/total_count_txt"
            style="@style/invite_code_txt"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:gravity="right|center_vertical"
            tools:ignore="HardcodedText,InefficientWeight,RtlHardcoded" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            tools:ignore="RtlSymmetry">

            <TextView
                style="@style/invite_code_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_out_price" />

            <TextView
                android:id="@+id/total_out_price_txt"
                style="@style/invite_code_txt"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:gravity="right|center_vertical"
                tools:ignore="HardcodedText,InefficientWeight,RtlHardcoded" />
        </LinearLayout>

        <include
            layout="@layout/include_line_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            tools:ignore="RtlSymmetry">

            <TextView
                style="@style/invite_code_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_in_price" />

            <TextView
                android:id="@+id/total_in_price_txt"
                style="@style/invite_code_txt"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/zero"
                tools:ignore="HardcodedText,InefficientWeight,RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>